--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "http://dl.bintray.com/deckyfx/android" }
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +20,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "http://dl.bintray.com/deckyfx/android" }
+        maven { url 'https://maven.google.com' }
     }
 }
 
