--- a/httprequest/build.gradle
+++ b/httprequest/build.gradle
@@ -31,7 +31,7 @@ def gitUrl = 'https://github.com/deckyfx/' + artifactName + '.git' // Git reposi
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
     enforceUniquePackageName = false
     //it was deprecated, but still work
     android.packageBuildConfig = false
