--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.github.deckyfx.httprequest"
+        applicationId "com.github.deckyfx.httprequestapp"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
