--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.2-4'
     repositories {
-        jcenter()
-        maven { url "https://jitpack.io" }
-        maven { url "http://dl.bintray.com/deckyfx/android" }
         maven { url 'https://maven.google.com' }
+        maven { url 'https://jitpack.io' }
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
-        maven { url "https://jitpack.io" }
-        maven { url "http://dl.bintray.com/deckyfx/android" }
         maven { url 'https://maven.google.com' }
+        maven { url 'https://jitpack.io' }
+        jcenter()
     }
 }
 
