--- a/httprequest/build.gradle
+++ b/httprequest/build.gradle
@@ -62,7 +62,8 @@ dependencies {
     compile 'com.github.franmontiel:PersistentCookieJar:v1.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-    compile 'com.github.deckyfx:dbhelper:0.4'
+    compile 'org.greenrobot:greendao:3.2.0'
+    compile 'com.github.deckyfx:dbhelper:0.5'
 
     compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.android.support:recyclerview-v7:24.0.0-beta1'
