--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compileOnly 'com.github.franmontiel:PersistentCookieJar:v1.0.0'
     compileOnly 'com.squareup.okhttp3:okhttp:3.2.0'
     compileOnly 'com.github.deckyfx:dbhelper:-SNAPSHOT'
+    compileOnly 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
     testCompile 'junit:junit:4.12'
 }
