--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,49 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+ ~ Copyright (C) 2017 Jeff Gilfelt.
+ ~
+ ~ Licensed under the Apache License, Version 2.0 (the "License");
+ ~ you may not use this file except in compliance with the License.
+ ~ You may obtain a copy of the License at
+ ~
+ ~      http://www.apache.org/licenses/LICENSE-2.0
+ ~
+ ~ Unless required by applicable law or agreed to in writing, software
+ ~ distributed under the License is distributed on an "AS IS" BASIS,
+ ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ ~ See the License for the specific language governing permissions and
+ ~ limitations under the License.
+ -->
+
+
+<!-- android:label="@string/app_name" -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.deckyfx.httprequest">
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
->
+    <application
+        android:allowBackup="true"
+        android:label="test"
+        android:supportsRtl="true">
+        <!--
+        <provider
+            android:name=".logging.chuckop.internal.data.ChuckContentProvider"
+            android:authorities=".logging.chuckop.provider"
+            android:exported="false" />
 
+        <activity
+            android:name=".logging.chuckop.internal.ui.MainActivity"
+            android:label="@string/chuck_name"
+            android:launchMode="singleTask"
+            android:taskAffinity="com.github.deckyfx.httprequest.logging.chuckop.task"
+            android:theme="@style/Chuck.Theme" />
+
+        <activity android:name=".logging.chuckop.internal.ui.TransactionActivity"
+            android:theme="@style/Chuck.Theme"
+            android:parentActivityName=".logging.chuckop.internal.ui.MainActivity"/>
+        <service
+            android:name=".logging.chuckop.internal.support.ClearTransactionsService"
+            android:exported="false" />
+        -->
     </application>
 
 </manifest>
