--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,22 +5,21 @@ apply plugin: 'com.github.dcendents.android-maven'
 group = 'com.github.deckyfx'
 version = versionName
 
-def groupName = group
+def groupName   = group
 def artifactName = 'httprequest'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '25.0.0'
-    enforceUniquePackageName = false
-    android.packageBuildConfig = false
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 14
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -38,42 +37,10 @@ android {
     }
 }
 
-// Automatic versioning
-//ext.INCREASE_VERSION_NAME_WHEN_RUN_TASK = ""
-//ext.INCREASE_VERSION_CODE_WHEN_RUN_TASK = ""
-//apply from: 'https://raw.githubusercontent.com/deckyfx/AndroidTemplate/master/automatic-versioning.gradle'
-
-// Automatic sqlite management - Using old version from bintray
-// apply from: 'https://raw.githubusercontent.com/deckyfx/gdgen/master/gdgen.gradle'
-// Automatic sqlite management - Using new version from jitpack
-apply from: 'https://raw.githubusercontent.com/deckyfx/gdgen/master/gdgen-new.gradle'
-
 configurations {
     doc {
         transitive false
     }
-}
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-    compile 'com.github.deckyfx:dbhelper:-SNAPSHOT'
-
-    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.1'
-    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.0'
-    compile group: 'com.squareup.okio', name: 'okio', version: '1.13.0'
-
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'nl.qbusict:cupboard:2.2.0'
-    compile "com.android.support:design:25.3.1"
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile "com.android.support:support-v4:+"
-
-    testCompile 'junit:junit:4.12'
 }
 
 // build a jar with source files
@@ -107,4 +74,26 @@ android.libraryVariants.all { variant ->
     task.dependsOn variant.javaCompile
     task.from variant.javaCompile.destinationDir
     artifacts.add('archives', task);
+}
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    // NOTE: test libraries
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    compileOnly 'com.github.deckyfx:dbhelper:-SNAPSHOT'
+
+    compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.1'
+    compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
+    compileOnly group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.0'
+    compileOnly group: 'com.squareup.okio', name: 'okio', version: '1.13.0'
+
+    compileOnly 'com.google.code.gson:gson:2.8.0'
+    compileOnly "nl.qbusict:cupboard:2.2.0"
+    compileOnly "com.android.support:design:+"
+    compileOnly "com.android.support:appcompat-v7:+"
+    compileOnly "com.android.support:support-v4:+"
 }
