--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,30 @@ version = versionName
 def groupName   = group
 def artifactName = 'httprequest'
 
+buildscript {
+    ext.autoversion_version = '1.0.3'
+    ext.gdgengradle_version = '1.0.7'
+
+    repositories {
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
+
+    dependencies {
+        classpath "gradle.plugin.com.github.deckyfx:autoversion:$autoversion_version"
+        classpath "gradle.plugin.com.github.deckyfx:gdgengradle:$gdgengradle_version"
+    }
+}
+
+configurations.all {
+    // NOTE: check for updates every time we build
+    //resolutionStrategy {
+    //   cacheChangingModulesFor 0, 'seconds'
+    //}
+}
+
+// apply plugin: "com.github.deckyfx.autoversion"
+// apply plugin: "com.github.deckyfx.gdgengradle"
+
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -84,6 +108,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    compileOnly 'com.github.deckyfx:simpleadapter:-SNAPSHOT@aar'
     compileOnly 'com.github.deckyfx:dbhelper:-SNAPSHOT'
 
     compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.1'
