--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,13 @@ buildscript {
     }
 }
 
+configurations.all {
+    // NOTE: check for updates every time we build
+    //resolutionStrategy {
+    //   cacheChangingModulesFor 0, 'seconds'
+    //}
+}
+
 allprojects {
     repositories {
         google()
