--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ def groupName   = group
 def artifactName = 'httprequest'
 
 buildscript {
-    ext.autoversion_version = '1.0.3'
-    ext.gdgengradle_version = '1.0.7'
+    ext.autoversion_version = '1.0.4'
+    ext.gdgengradle_version = '1.0.8'
 
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
@@ -33,17 +33,13 @@ configurations.all {
 // apply plugin: "com.github.deckyfx.gdgengradle"
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
-
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     buildTypes {
         release {
@@ -97,7 +93,7 @@ android.libraryVariants.all { variant ->
     def task = project.tasks.create "jar${name.capitalize()}", Jar
     task.dependsOn variant.javaCompile
     task.from variant.javaCompile.destinationDir
-    artifacts.add('archives', task);
+    artifacts.add('archives', task)
 }
 
 dependencies {
@@ -105,21 +101,21 @@ dependencies {
 
     // NOTE: test libraries
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    compileOnly 'com.github.deckyfx:simpleadapter:-SNAPSHOT@aar'
-    compileOnly 'com.github.deckyfx:dbhelper:-SNAPSHOT'
+    compileOnly 'com.github.deckyfx:simpleadapter:0.33@aar'
+    compileOnly 'com.github.deckyfx:dbhelper:0.8@aar'
 
-    compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.1'
-    compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-    compileOnly group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.0'
-    compileOnly group: 'com.squareup.okio', name: 'okio', version: '1.13.0'
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
+    compileOnly 'com.squareup.okhttp3:okhttp:3.10.0'
+    compileOnly 'com.squareup.okio:okio:1.14.0'
 
-    compileOnly 'com.google.code.gson:gson:2.8.0'
+    compileOnly 'com.google.code.gson:gson:2.8.2'
     compileOnly "nl.qbusict:cupboard:2.2.0"
-    compileOnly "com.android.support:design:+"
-    compileOnly "com.android.support:appcompat-v7:+"
-    compileOnly "com.android.support:support-v4:+"
+    compileOnly "com.android.support:design:28.0.0"
+    compileOnly "com.android.support:appcompat-v7:28.0.0"
+    compileOnly "com.android.support:support-v4:28.0.0"
     implementation 'org.jetbrains:annotations-java5:15.0'
 }
